# ev-rs

./: .clippy.toml  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.yaml  docker-compose.ev-node.yml  docker-compose.testapp.yml  docker-compose.yml  justfile  rust-toolchain.toml  wrangler.toml
.cargo/: config.toml
crates/app/genesis/: Cargo.toml  README.md
crates/app/genesis/examples/: genesis.json
crates/app/genesis/src/: error.rs  file.rs  lib.rs  registry.rs  types.rs
crates/app/mempool/: Cargo.toml
crates/app/mempool/src/: error.rs  lib.rs  pool.rs  traits.rs  tx.rs
crates/app/node/: Cargo.toml
crates/app/node/src/: cli.rs  config.rs  lib.rs
crates/app/operations/: Cargo.toml
crates/app/operations/src/: errors.rs  lib.rs
crates/app/operations/src/config/: loader.rs  mod.rs  types.rs  validation.rs
crates/app/operations/src/observability/: logging.rs  metrics.rs  mod.rs
crates/app/operations/src/shutdown/: components.rs  coordinator.rs  mod.rs  signals.rs
crates/app/operations/src/startup/: checks.rs  mod.rs  sequence.rs
crates/app/runtime/stf/: Cargo.toml  README.md
crates/app/runtime/stf/src/: execution_scope.rs  execution_state.rs  gas.rs  lib.rs  results.rs  runtime_api_impl.rs
crates/app/sdk/collections/: Cargo.toml  README.md
crates/app/sdk/collections/src/: item.rs  lib.rs  map.rs  mocks.rs  prop_tests.rs  queue.rs  unordered_map.rs  vector.rs
crates/app/sdk/core/: Cargo.toml
crates/app/sdk/core/src/: error.rs  events_api.rs  fungible_asset.rs  lib.rs  low_level.rs  message.rs  runtime_api.rs  schema.rs  storage_api.rs  unique_api.rs
crates/app/sdk/macros/: Cargo.toml
crates/app/sdk/macros/src/: lib.rs
crates/app/sdk/macros/tests/: compile_tests.rs
crates/app/sdk/macros/tests/fail/: duplicate_storage_prefix.rs  duplicate_storage_prefix.stderr  invalid_query.rs  invalid_query.stderr  missing_storage_attr.rs  missing_storage_attr.stderr  multiple_init.rs  multiple_init.stderr  query_exec_call.rs  query_exec_call.stderr
crates/app/sdk/math/: Cargo.toml
crates/app/sdk/math/src/: lib.rs  uq64_64.rs
crates/app/server/: Cargo.toml
crates/app/server/src/: block.rs  builder.rs  dev.rs  error.rs  indexer.rs  lib.rs  persistence.rs  server.rs
crates/app/stf/: Cargo.toml  README.md
crates/app/stf/proptest-regressions/: gas.txt  lib.txt
crates/app/stf/src/: errors.rs  execution_scope.rs  execution_state.rs  gas.rs  handlers.rs  invoker.rs  lib.rs  metrics.rs  results.rs  runtime_api_impl.rs  validation.rs
crates/app/stf/tests/: quint_call_depth_conformance.rs  quint_common.rs  quint_conformance.rs  quint_core_connect.rs  quint_post_tx_conformance.rs  quint_post_tx_connect.rs
crates/app/testapp/: Cargo.toml
crates/app/testapp/benches/: stf_bench.rs
crates/app/testapp/src/: block.rs  eoa.rs  eth_eoa.rs  lib.rs  main.rs  sim_testing.rs  storage.rs  test_block_exec.rs  testing.rs  types.rs
crates/app/testapp/tests/: authentication_tests.rs  block_exec.rs  escrow_tests.rs  mempool_e2e.rs  mod.rs  schema_tests.rs  simulation_long_tests.rs  simulation_tests.rs
crates/app/tx/eth/: Cargo.toml
crates/app/tx/eth/src/: decoder.rs  envelope.rs  eoa_registry.rs  error.rs  gateway.rs  lib.rs  mempool.rs  payload.rs  sender_type.rs  test_utils.rs  traits.rs
crates/app/tx/eth/src/ethereum/: eip1559.rs  legacy.rs  mod.rs  recovery.rs
crates/app/tx/eth/src/verifier/: ecdsa.rs  mod.rs  registry.rs
crates/app/tx/eth/tests/: integration_tests.rs  proptest_tests.rs
crates/consensus/: Cargo.toml
crates/consensus/cometbft/: Cargo.toml
crates/consensus/cometbft/src/: consensus.rs  lib.rs  main.rs  tower.rs  types.rs
crates/consensus/cometbft_account_trait/: Cargo.toml  README.md
crates/consensus/cometbft_account_trait/src/: lib.rs
crates/consensus/src/: automaton.rs  block.rs  config.rs  engine.rs  lib.rs  marshal.rs  relay.rs  reporter.rs  runner.rs
crates/consensus/tests/: simplex_integration.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: channels.rs  config.rs  lib.rs  provider.rs  validator.rs
crates/rpc/chain-index/: Cargo.toml
crates/rpc/chain-index/proptest-regressions/: index.txt
crates/rpc/chain-index/src/: cache.rs  error.rs  index.rs  integration.rs  lib.rs  provider.rs  querier.rs  types.rs
crates/rpc/eth-jsonrpc/: Cargo.toml
crates/rpc/eth-jsonrpc/src/: api.rs  error.rs  health.rs  lib.rs  metrics_middleware.rs  server.rs  subscriptions.rs
crates/rpc/evnode/: Cargo.toml  build.rs
crates/rpc/evnode/examples/: run_server.rs
crates/rpc/evnode/proto/evnode/v1/: execution.proto
crates/rpc/evnode/src/: error.rs  lib.rs  runner.rs  server.rs  service.rs  testapp_impl.rs
crates/rpc/grpc/: Cargo.toml  build.rs
crates/rpc/grpc/src/: conversion.rs  error.rs  lib.rs  server.rs
crates/rpc/grpc/src/services/: execution.rs  mod.rs  streaming.rs
crates/rpc/types/: Cargo.toml
crates/rpc/types/src/: block.rs  lib.rs  log.rs  receipt.rs  transaction.rs
crates/runtime/stf/: Cargo.toml  README.md
crates/runtime/stf/src/: account.rs  checkpoint.rs  example_test.rs  execution_state.rs  gas.rs  lib.rs  mocks.rs  results.rs  runtime_api_impl.rs  test.rs  test_all.rs
crates/sdk/macros/: Cargo.toml
crates/sdk/macros/src/: lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: block_store.rs  cache.rs  commonware_impl.rs  lib.rs  metrics.rs  mock.rs  qmdb_impl.rs  types.rs  warming.rs
crates/testapp/: Cargo.toml
crates/testapp/src/: lib.rs  test_block_exec.rs
crates/testing/cli/: Cargo.toml
crates/testing/cli/src/: main.rs  replay.rs  report.rs  run.rs
crates/testing/debugger/: Cargo.toml
crates/testing/debugger/src/: breakpoints.rs  format.rs  inspector.rs  lib.rs  replay.rs  trace.rs
crates/testing/proptest/: Cargo.toml
crates/testing/proptest/src/: generators.rs  invariants.rs  lib.rs  shrinker.rs
crates/testing/simulator/: Cargo.toml
crates/testing/simulator/src/: backend.rs  eth_eoa.rs  lib.rs  metrics.rs  seed.rs  stf_harness.rs  storage.rs  time.rs
specs/: stf.qnt  (+4 more)
(+247 files in other folders)
