[workspace]
members = [
    "crates/app/actor",
    "crates/types",
    "crates/rpc",
    "crates/app/runtime/stf",
    "crates/app/sdk/collections",
    "crates/app/sdk/core",
    "crates/app/sdk/macros",
    "crates/app/sdk/server_core",
    "crates/app/sdk/standards/*",
    "crates/app/sdk/x/*",
    "crates/storage",
    "crates/app/testapp", "crates/app/sdk/testing", "crates/consensus/cometbft", "crates/consensus/cometbft_account_trait", "crates/app/sdk/math",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/01builders/evolve"
rust-version = "1.86.0"

[workspace.dependencies]
evolve_collections = { path = "crates/app/sdk/collections" }
evolve_core = { path = "crates/app/sdk/core" }
evolve_macros = { path = "crates/app/sdk/macros" }
evolve_server_core = { path = "crates/app/sdk/server_core" }
evolve_math = { path = "crates/app/sdk/math" }

evolve_fungible_asset = { path = "crates/app/sdk/standards/evolve_fungible_asset" }

evolve_block_info = { path = "crates/app/sdk/x/block_info" }
evolve_events = { path = "crates/app/sdk/x/events" }
evolve_escrow = { path = "crates/app/sdk/x/escrow" }
evolve_gas = { path = "crates/app/sdk/x/gas" }
evolve_ns = { path = "crates/app/sdk/x/ns" }
evolve_poa = { path = "crates/app/sdk/x/poa" }
evolve_scheduler = { path = "crates/app/sdk/x/scheduler" }
evolve_token = { path = "crates/app/sdk/x/token" }
evolve_unique = { path = "crates/app/sdk/x/unique" }

evolve_cometbft = { path = "crates/consensus/cometbft" }
evolve_cometbft_account_trait = { path = "crates/consensus/cometbft_account_trait" }

evolve_stf = { path = "crates/app/runtime/stf" }

evolve_testing = { path = "crates/app/sdk/testing" }
evolve_testapp = { path = "crates/app/testapp" }

# outside deps
borsh = { features = ["derive"], version = "1.5.5" }
fixed = { version = "1.29", features = ["borsh", "serde"] }
log = { version = "0.4.27" }
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
base64 = "0.22.1"
sha2 = { version = "0.10.8" }

[workspace.lints.rust]
# missing_docs = "deny"

[workspace.lints.rustdoc]
# broken_intra_doc_links = "deny"
# private_intra_doc_links = "deny"
