[workspace]
members = [
    "crates/rpc/types",
    "crates/rpc/eth-jsonrpc",
    "crates/rpc/grpc",
    "crates/rpc/chain-index",
    "crates/app/operations",
    "crates/app/stf",
    "crates/app/tx",
    "crates/app/sdk/collections",
    "crates/app/sdk/core",
    "crates/app/sdk/macros",
    "crates/app/sdk/stf_traits",
    "crates/app/server",
    "crates/app/sdk/standards/*",
    "crates/app/sdk/x/*",
    "crates/storage",
    "crates/app/sdk/testing",
    "crates/app/sdk/math",
    "crates/app/testapp",
    "crates/app/genesis",
    "crates/testing/simulator",
    "crates/testing/proptest",
    "crates/testing/debugger",
    "crates/testing/cli",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/01builders/evolve"
rust-version = "1.86.0"

[workspace.dependencies]
evolve_collections = { path = "crates/app/sdk/collections" }
evolve_core = { path = "crates/app/sdk/core" }
evolve_macros = { path = "crates/app/sdk/macros" }
evolve_stf_traits = { path = "crates/app/sdk/stf_traits" }
evolve_server = { path = "crates/app/server" }
evolve_math = { path = "crates/app/sdk/math" }

evolve_fungible_asset = { path = "crates/app/sdk/standards/evolve_fungible_asset" }
evolve_authentication = { path = "crates/app/sdk/standards/evolve_authentication" }

evolve_scheduler = { path = "crates/app/sdk/x/scheduler" }
evolve_token = { path = "crates/app/sdk/x/token" }

evolve_stf = { path = "crates/app/stf" }
evolve_genesis = { path = "crates/app/genesis" }
evolve_tx = { path = "crates/app/tx" }
evolve_operations = { path = "crates/app/operations" }

evolve_rpc_types = { path = "crates/rpc/types" }
evolve_eth_jsonrpc = { path = "crates/rpc/eth-jsonrpc" }
evolve_grpc = { path = "crates/rpc/grpc" }
evolve_chain_index = { path = "crates/rpc/chain-index" }

evolve_testing = { path = "crates/app/sdk/testing" }

evolve_storage = { path = "crates/storage" }

evolve_simulator = { path = "crates/testing/simulator" }
evolve_proptest = { path = "crates/testing/proptest" }
evolve_debugger = { path = "crates/testing/debugger" }


# outside deps
linkme = { version = "0.3", default-features = false }
commonware-cryptography = "0.0.65"
commonware-runtime = "0.0.65"
commonware-storage = "0.0.65"
commonware-utils = "0.0.65"
commonware-codec = "0.0.65"
borsh = { features = ["derive"], version = "1.5.5" }
clap = { version = "4.5.31", features = ["derive"] }
fixed = { version = "1.29", features = ["borsh", "serde"] }
log = { version = "0.4.27" }
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
base64 = "0.22.1"
sha2 = { version = "0.10.8" }
sha3 = { version = "0.10.8" }
async-trait = "0.1"

# Alloy ecosystem for Ethereum transaction handling
alloy-primitives = "0.8"
alloy-consensus = "0.9"
alloy-rlp = "0.3"
alloy-eips = "0.9"
[workspace.lints.rust]
# missing_docs = "deny"

[workspace.lints.clippy]
# Determinism lints - catch common sources of non-determinism
disallowed_types = "warn"

[workspace.lints.rustdoc]
# broken_intra_doc_links = "deny"
# private_intra_doc_links = "deny"
