[package]
name = "evolve_consensus"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-codec = { workspace = true }
commonware-utils = { workspace = true }

evolve_core = { workspace = true }
evolve_server = { workspace = true }
evolve_stf_traits = { workspace = true }
evolve_mempool = { workspace = true }
evolve_storage = { workspace = true }

alloy-primitives = { workspace = true }
borsh = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
