[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "evolve_storage"
version = "0.1.0"

[dependencies]
evolve_core.workspace = true
async-trait = "0.1"
bytes = "1.5"
commonware-codec.workspace = true
commonware-cryptography.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-utils.workspace = true
futures = "0.3"
hashbrown = "0.15"
hex = "0.4"
log = "0.4"
parking_lot = "0.12"
sha2 = { workspace = true }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
linkme = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
error-decode = ["linkme", "evolve_core/error-decode"]
testing = []
