[package]
name = "evolve_node"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Reusable dev-node runner for Evolve applications."

[dependencies]
bytes = "1"
commonware-runtime = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true }
alloy-primitives = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
figment = { version = "0.10", features = ["yaml", "env"] }
clap = { workspace = true }

evolve_core = { workspace = true }
evolve_mempool = { workspace = true }
evolve_tx_eth = { workspace = true }
evolve_server = { workspace = true }
evolve_stf_traits = { workspace = true }
evolve_storage = { workspace = true }
evolve_chain_index = { workspace = true }
evolve_eth_jsonrpc = { workspace = true }
evolve_rpc_types = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.8"
