[package]
name = "evolve_operations"
version = "0.1.0"
edition = "2021"

license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
evolve_core.workspace = true
evolve_storage.workspace = true
tokio = { workspace = true, features = ["signal", "sync", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
log.workspace = true
async-trait.workspace = true
linkme = { workspace = true, default-features = false, optional = true }

# Observability
slog = "2.7"
slog-json = "2.6"
slog-async = "2.8"
slog-stdlog = "4.1"
slog-atomic = "3.1"
slog-term = "2.9"
prometheus-client = "0.22"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
error-decode = ["linkme", "evolve_core/error-decode"]

[lints]
workspace = true
