[package]
edition = "2021"
license.workspace = true
name = "evolve_stf"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
borsh.workspace = true
evolve_core.workspace = true
evolve_fungible_asset.workspace = true
evolve_stf_traits.workspace = true
hashbrown = "0.15"
ahash = { version = "0.8.11", optional = true }
linkme = {version = "0.3", default-features = false, optional = true}

[dev-dependencies]
proptest = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true

[features]
default = []
error-decode = ["linkme", "evolve_core/error-decode"]
fast-overlay-hash = ["ahash"]
testing = []
