[package]
name = "evolve_testapp"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true
documentation = "A test application for the evolve stack."

[dependencies]
evolve_core.workspace = true
evolve_fungible_asset.workspace = true
evolve_authentication.workspace = true
evolve_collections.workspace = true
evolve_macros.workspace = true
evolve_server_core.workspace = true
evolve_stf = { workspace = true, features = ["testing"] }

evolve_block_info.workspace = true
evolve_escrow.workspace = true
evolve_scheduler.workspace = true
evolve_token.workspace = true
evolve_gas.workspace = true
evolve_poa.workspace = true
evolve_operations.workspace = true

borsh.workspace = true
log.workspace = true
tokio.workspace = true
slog = "2.7"

# TODO: Move evolve_testing to dev-dependencies once storage engine is fully implemented
# This dependency is currently required in main dependencies for testing infrastructure
evolve_testing.workspace = true
evolve_simulator.workspace = true
evolve_debugger.workspace = true

sha2.workspace = true


simple_logger = { version = "5.0.0" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "stf_bench"
harness = false

[lints]
workspace = true
