[package]
name = "cometbft"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
evolve_core.workspace = true
evolve_server_core.workspace = true
evolve_stf.workspace = true

evolve_ns.workspace = true

evolve_cometbft_account_trait.workspace = true

simple_logger = { version = "5.0.0" }
log = { version = "0.4.27" }

tendermint = "0.40.3"
tower-abci = "0.19.1"
tower = { version = "0.5.2", features = ["load-shed", "buffer", "limit"] }
bytes = "1.10.1"
futures = "0.3.31"
tokio = {version = "1.44.2", features = ["full"]}
# TODO Remove
evolve_testing.workspace = true
evolve_testapp.workspace = true
base64 = "0.22.1"

[dev-dependencies]

[lints]
workspace = true
