[package]
name = "evolve_cometbft"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
evolve_core.workspace = true
evolve_server_core.workspace = true
evolve_stf.workspace = true
evolve_cometbft_account_trait.workspace = true

log.workspace = true

tendermint = "0.40.3"
tower-abci = "0.19.1"
futures.workspace = true
base64.workspace = true

tower = { version = "0.5.2", features = ["load-shed", "buffer", "limit"] }

[dev-dependencies]

[features]
testing = []

[lints]
workspace = true
