[package]
name = "evolve_chain_index"
version = "0.1.0"
edition = "2021"

license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Enable full archive mode with all historical data
archive = []

[dependencies]
evolve_core.workspace = true
evolve_server_core.workspace = true
evolve_stf.workspace = true
evolve_storage.workspace = true
evolve_rpc_types.workspace = true
evolve_eth_jsonrpc.workspace = true

alloy-primitives = { version = "0.8", features = ["serde"] }
borsh.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio.workspace = true
async-trait.workspace = true
log.workspace = true
thiserror = "2.0"
parking_lot = "0.12"
lru = "0.12"
sha2.workspace = true
futures = "0.3"

[dev-dependencies]
proptest = "1.4"

[lints]
workspace = true
