[package]
name = "evolve_eth_jsonrpc"
version = "0.1.0"
edition = "2021"

license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
evolve_core.workspace = true
evolve_stf.workspace = true
evolve_rpc_types.workspace = true

jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"
futures = "0.3"
parking_lot = "0.12"
async-trait.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log.workspace = true
thiserror = "2.0"
alloy-primitives = { version = "0.8", features = ["serde"] }
sha2.workspace = true

# Observability
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["server"] }
prometheus-client = "0.22"

[lints]
workspace = true
