[package]
name = "evolve_rpc_types"
version = "0.1.0"
edition = "2021"

license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
evolve_core.workspace = true
evolve_tx_eth.workspace = true

alloy-primitives = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2.workspace = true

[dev-dependencies]
proptest = "1.4"

[lints]
workspace = true
