[package]
name = "evolve_stf"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
evolve_core = { workspace = true }
evolve_server_core = { workspace = true }
evolve_fungible_asset = { workspace = true }

[dev-dependencies]
evolve_collections = { workspace = true }
evolve_macros = { workspace = true }
evolve_ns = { workspace = true }
evolve_scheduler = { workspace = true }
borsh = { workspace = true, features = ["derive"] }

[lints]
workspace = true
