[package]
name = "evolve_debugger"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Time-travel debugging for Evolve SDK simulations"

[dependencies]
evolve_core = { workspace = true }
evolve_server_core = { workspace = true }
evolve_simulator = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# Compression
flate2 = "1.0"

# Hashing
sha2.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = []
error-decode = []  # For define_error! macro cfg compatibility
