[package]
name = "evolve_proptest"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Property-based testing framework for Evolve SDK"

[dependencies]
evolve_core = { workspace = true }
evolve_stf_traits = { workspace = true }
evolve_simulator = { workspace = true }

# Property testing
proptest = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2.workspace = true

[dev-dependencies]
rand = "0.8"

[features]
default = []
error-decode = []  # For define_error! macro cfg compatibility
