[package]
name = "evolve_simulator"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Deterministic simulation engine for Evolve SDK testing"

[dependencies]
evolve_core = { workspace = true }
linkme = { version = "0.3", default-features = false, optional = true }
evolve_stf_traits = { workspace = true }
evolve_stf = { workspace = true, features = ["testing"] }
evolve_testing = { workspace = true }
evolve_storage = { workspace = true }

# PRNG
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# Hashing
sha2.workspace = true

# Time tracking
instant = "0.1"
futures = { workspace = true }
commonware-runtime = { workspace = true }
tokio = { workspace = true }
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }

[features]
default = []
error-decode = ["linkme", "evolve_core/error-decode"]
