[package]
name = "evolve_stf"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
evolve_core.workspace = true
evolve_server_core.workspace = true
evolve_fungible_asset.workspace = true
evolve_gas.workspace = true
evolve_ns.workspace = true
evolve_unique.workspace = true


[dev-dependencies]

[lints]
workspace = true
