[package]
edition = "2021"
license.workspace = true
name = "evolve_collections"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
borsh = {workspace = true, features = ["derive"]}
evolve_core = {workspace = true}
linkme = {version = "0.3", default-features = false, optional = true}

[lints]
workspace = true

[features]
default = []
error-decode = ["linkme", "evolve_core/error-decode"]

[dev-dependencies]
proptest = "1.4"
