[package]
edition = "2021"
license.workspace = true
name = "evolve_core"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
borsh = {workspace = true, features = ["derive"]}
linkme = {version = "0.3", default-features = false, optional = true}
evolve_macros = {path = "../macros"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[lints]
workspace = true

[features]
default = []
error-decode = ["linkme"]
