[package]
name = "evolve_macros"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
trybuild = "1.0"
borsh = { version = "1.2", features = ["derive"] }
