[package]
name = "evolve_math"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
evolve_core.workspace = true

fixed = { workspace = true }
linkme = {version = "0.3", default-features = false, optional = true}

[lints]
workspace = true

[features]
default = []
error-decode = ["linkme", "evolve_core/error-decode"]
