[package]
name = "evolve_tx_eth"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ethereum-compatible transaction types for Evolve"

[features]
default = []
error-decode = ["linkme", "evolve_core/error-decode"]

[dependencies]
evolve_core = { workspace = true }
evolve_mempool = { workspace = true }
evolve_stf_traits = { workspace = true }
linkme = { version = "0.3", default-features = false, optional = true }

# Alloy ecosystem
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }

# Serialization
borsh = { workspace = true }

# Parallelism for signature verification
rayon = "1.10"

# Hashing
sha2 = { workspace = true }

[dev-dependencies]
# For testing with real signatures
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
# For hex test vectors
hex = "0.4"
# For property-based testing
proptest = "1.5"
# Random number generation
rand = "0.8"
# For TxDecoder trait in tests
evolve_stf_traits = { workspace = true }

[lints]
workspace = true
